FIXED: html x overflow on mobile screens

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,6 +11,11 @@
 *::-webkit-scrollbar {
   display: none;
 }
+
+html {
+  overflow-x: hidden;
+}
+
 body {
   font-family: var(--main-font);
   overflow-x: hidden;
